3-gateway-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-service
spec:
  hosts:
  - "echo-service.example.com"
  gateways:
  - echo-service-gateway
  http:
  - match:
    - uri:
        prefix: /xpto
    route:
    - destination:
        port:
          number: 8080
        host: echo-service
